# blackbox_raw

./: Docs.md  README.md  RELEASE_NOTES.md  build.gradle  farlight_crash_log.txt  farlight_leak_audit_0628.txt  gradle.properties  guest_log.txt  settings.gradle  tombstone_17_latest.txt  tombstone_18_latest.txt
BCoreSrc No Ban/: build.gradle  settings.gradle
BCoreSrc No Ban/app/: build.gradle
BCoreSrc No Ban/app/Bcore/: build.gradle  consumer-rules.pro  proguard-rules.pro
BCoreSrc No Ban/app/Bcore/src/main/cpp/: BoxCore.cpp  BoxCore.h  CMakeLists.txt  FarlightEspSocketServer.cpp  FarlightEspSocketServer.h  IO.cpp  IO.h  Log.h  block-anogs.hpp  newblock.hpp
BCoreSrc No Ban/app/Bcore/src/main/cpp/Hook/: DexFileHook.cpp  LogScrubHook.cpp  LogScrubHook.h  ProcFsHook.cpp  ProcFsHook.h  SystemPropertiesHook.cpp  SystemPropertiesHook.h  UnixFileSystemHook.cpp
BCoreSrc No Ban/app/Bcore/src/main/cpp/JniHook/: JniHook.cpp  JniHook.h
BCoreSrc No Ban/app/Bcore/src/main/cpp/Utils/: MemfdElfLoader.cpp  MemfdElfLoader.h
BCoreSrc No Ban/app/Bcore/src/main/cpp/esp_protocol/: farlight_esp_protocol.h  socket_framing.h
Bcore/: build.gradle
Bcore/src/main/: AndroidManifest.xml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  BRPlayerCharacterBase.lua  CMakeLists.txt  GameModHookLib.cpp  GuestLoginHookLib.cpp  MapsGameLibsDump.cpp  MapsGameLibsDump.h  MemfdElfLoader.cpp  MemfdElfLoader.h  Ue4PatternFinder.cpp  Ue4PatternFinder.h  fake_dlfcn.cpp  farlightesp.map.txt  guestloginhook.map.txt
app/src/main/jni/esp_core/Main/: DrawTools.h  FarlightEspEntry.cpp  FarlightOffsets.hpp  Vector.h
app/src/main/jni/esp_core/Render/: AImGui.hpp
app/src/main/jni/esp_core/Render/ImGui/: imgui.h
app/src/main/jni/esp_protocol/: farlight_esp_protocol.h
app/src/main/jni/farlightesp/: FarlightEspHookLib.cpp  FarlightEspReader.cpp  FarlightEspReader.h  FarlightEspSocketClient.cpp
farlight sdk/: Logs.txt  Objects.txt  Offsets.hpp  SDK.hpp  script.json
farlight sdk/SDK/: UE_ACLPlugin_classes.hpp  UE_ACLPlugin_structs.hpp  UE_AIModule_classes.hpp  UE_AIModule_structs.hpp  UE_A_TextureArrayTest_classes.hpp  UE_ActorSequence_classes.hpp  UE_ActorSequence_structs.hpp  UE_AdaptiveUROManager_classes.hpp  UE_AdaptiveUROManager_structs.hpp  UE_AgoraWwiseCommHandler_classes.hpp  UE_AiPal_classes.hpp  UE_AkAudio_classes.hpp  UE_AkAudio_structs.hpp  UE_AndroidDeviceProfileSelector_classes.hpp  UE_AndroidDeviceProfileSelector_structs.hpp  UE_AndroidMediaFactory_classes.hpp  UE_AndroidPermission_classes.hpp  UE_AndroidRuntimeSettings_classes.hpp  UE_AndroidRuntimeSettings_structs.hpp  UE_AnimGraphRuntime_classes.hpp  UE_AnimGraphRuntime_structs.hpp  UE_AnimNodesPlugin_classes.hpp  UE_AnimNodesPlugin_structs.hpp  UE_AnimationBudgetAllocator_classes.hpp  UE_AnimationBudgetAllocator_structs.hpp  UE_AnimationCore_classes.hpp  UE_AnimationCore_structs.hpp  UE_AnimationSharing_classes.hpp  UE_AnimationSharing_structs.hpp  UE_AppleImageUtils_classes.hpp  UE_AppleImageUtils_structs.hpp  UE_ArchVisCharacter_classes.hpp  UE_AssetRegistry_classes.hpp  UE_AssetRegistry_structs.hpp  UE_AssetTags_classes.hpp  UE_AssetTags_structs.hpp  UE_AudioExtensions_classes.hpp  UE_AudioExtensions_structs.hpp  UE_AudioMixer_classes.hpp  UE_AudioMixer_structs.hpp  (+313 more)
guest_reset_backup/: FLOW.txt
guest_reset_backup/java/: GuestAccountBackupHelper.java  GuestLoginHelper.java  RecoverGuestAdapter.java
guest_reset_backup/res/drawable/: bg_recover_guest_item_selector.xml  (+2 more)
guest_reset_backup/ui/: MainActivity_guest_reset_snippet.java  MainActivity_showRecoverGuestDialog.java
rvadapter-stub/: build.gradle
skin_lua/assets/: BGMIGameMod.lua  BGMIGameModBody.lua  bgmi_game_mod.lua  gamemod_config.ini  skin_attachments.txt  skin_mod_bgmi.lua
skin_lua/java/: AnogsBlockerHelper.java  CloneDataHelper.java  GameModHelper.java  GameModHookLoader.java  GameModLifecycleCallback.java  GuestHookCleanup.java  GuestLoginLifecycleCallback.java  GuestMemoryLoader.java  HdmpveBlockerHelper.java  KillCounterHelper.java  LibAnogsPatcher.java  LibGameModPatcher.java  SkinHelper.java
skin_lua/jni/: BulletTrackInProcess.cpp  BulletTrackInProcess.h  GameModHookLib.cpp  GuestLoginHookLib.cpp  MapsGameLibsDump.cpp  fake_dlfcn.h  skin.cpp
skin_lua/tools/: build_game_mod.py  build_gamemod_body.py  build_hybrid_skin.py  build_src_hub_skin.py  build_ultimate_skin_mod.py  extract_lua.py  gen_attachment_maps.py  git_skin.lua  install_ultimate_skin.py  merge_gamemod_asset.py  restore_full_skin.py  src_hub_vehicle.lua  sync_skin_lua.py  ultimate_skin_mod.lua
(+829 files in other folders)
